z-index fixes

--- a/app/styles/constants/z-index.scss
+++ b/app/styles/constants/z-index.scss
@@ -1,3 +1,6 @@
 
-$z-index-header: 2;
-$z-index-page-sticky: 1;
+$z-index-modal-host: 7000;
+$z-index-header: 5000;
+$z-index-tooltip: 3000;
+$z-index-conversation-host: 4000;
+$z-index-page-sticky: 3000;
