--- a/app/ui/Modal.scss
+++ b/app/ui/Modal.scss
@@ -1,13 +1,10 @@
-@import "../styles/constants/colors.scss";
-@import "../styles/constants/dimensions.scss";
-@import "../styles/constants/shadows.scss";
-
+@import "../styles/constants.scss";
 
 .Modal {
   position: absolute;
   top: $header-height + 20px;
   left: 50%;
-
+  z-index: $z-index-modal-host;
   width: 500px;
   padding: 1rem .5rem .5rem .5rem;
 
