--- a/app/ui/ModalHost.scss
+++ b/app/ui/ModalHost.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   background-color: rgba(black, 0.4);
-  z-index: 2001;
+  z-index: $z-index-modal-host;
   height: 100%;
   overflow: scroll;
 
